# NapoleonTW-CheatEngine

./: .gitignore  BUGFIX_SUMMARY.md  CHANGELOG.md  FIXED_TRAINER_GUIDE.md  HOW_TO_USE_TRAINER.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LINUX_INSTALL_COMPLETE.md  LINUX_SETUP.md  MOD-TEST-CHECKLIST.md  QUICKSTART.md  QUICKSTART_WEB_UI.md  README.md  README_TRAINER.md  TRAINER_README.md  WEB_UI_MIGRATION.md  build.bat  build.sh  dma_backend_patch.py  fix_advanced.py  fix_tab.py  fix_test.py  launch-cheat-engine.sh  launch_panel.py  napoleon.ini  patch_advanced.py  patch_backend.py  patch_backend_2.py  patch_backend_3.py  patch_backend_search.py  patch_cache_final.py  patch_cache_final_final.py  patch_freezer.py  patch_memory_tab.py  patch_platform.py  patch_scanner.py  patch_scanner_cache.py  patch_scanner_cache2.py  patch_scanner_cache3.py  (+14 more)
.Jules/: palette.md
.jules/: sentinel.md
docs/: ANIMATION_SHOWCASE.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_v2.md  DEVELOPER_GUIDE.md  NAPOLEON_PANEL_GUIDE.md  PANEL_ENHANCEMENTS_SUMMARY.md  PLUGIN_GUIDE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_REFERENCE_V2.md  QUICK_START_PANEL.md  SECURITY.md  USER_GUIDE.md  aob_signatures.md  schema.json
frontend/: index.html  package.json  vite.config.ts
plugins/: dxvk_plugin.py  example_plugin.py
scripts/: install-mod-linux.sh  install-mod-windows.bat  launch-trainer.bat  launch-trainer.sh  test-mod-installation.ps1  test-mod-installation.sh
src/: __main__.py  engine_service.py  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+114 files in other folders)
