[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napoleon-tw-cheat"
version = "2.1.0"
description = "Cross-platform cheat engine for Napoleon Total War"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9.8",
    "pynput>=1.7.7",
]

[project.optional-dependencies]
gui = ["PyQt6>=6.7.0"]
memory = ["pymem>=1.13"]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pyinstaller>=6.5.0",
]

[project.scripts]
napoleon-cheat = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
include = ["src*"]
