[package]
name = "napoleon-tw-cheat-engine"
version = "1.0.0"
description = "Napoleon TW Cheat Engine - Tauri desktop shell"
authors = ["Napoleon TW Cheat Engine Contributors"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open-api", "window-all", "clipboard-all", "dialog-all", "fs-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
